# To_Do_List

./: CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Makefile  Todo_List  cmake_install.cmake  compile_commands.json  resource.rc  vcpkg.json
.cmake/api/v1/reply/: cache-v2-edb75d8babe011add8b9.json  cmakeFiles-v1-3b53712e41782b106586.json  codemodel-v2-71128fb0dec9f6dd9b14.json  index-2024-11-12T09-48-53-0023.json  target-Task-Debug-b4c14a3b3612bd5dcaf1.json  target-Todo_List-Debug-1a76be1db5cd83affa3a.json  target-mylib-Debug-2a3a7bc5348ba8d078c2.json
lib/: CMakeLists.txt  Makefile  Task.cpp  Task.h  TodoList.cpp  TodoList.h  cmake_install.cmake  mylib.cpp  mylib.h
src/: CreateLogWindow.ixx  CreateTaskWindow.ixx  MainFrame.ixx  Task.ixx  TodoList.ixx  TodoListGUI.ixx  main.cpp
